--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,139 +1,129 @@
 /* =Global rules
 -----------------------------------------------------------------------------*/
-[ng-cloak], .ng-cloak {
-    display: none
+[ng-app].ng-cloak,
+[ng-app][ng-cloak] {
+  display: block !important;
+  opacity: 0;
 }
 
-body {
-    background: #fff;
-    color: #444;
+[ng-app] {
+  opacity: 1;
+  -webkit-transition: opacity 1s ease-out;
+  -moz-transition: opacity 1s ease-out;
+  transition: opacity 1s ease-out;
 }
 
-/* =Header
+body{
+  padding-top: 50px;
+  min-width: 768px;
+}
+
+/* =TWBS Header
 -----------------------------------------------------------------------------*/
 
-.hero-unit {
-    position: relative;
-    padding: 40px 0;
-    color: #fff;
-    text-align: center;
-    text-shadow: 0 1px 3px rgba(0,0,0,.4), 0 0 30px rgba(0,0,0,.075);
-    background: #020031;
-    background: -moz-linear-gradient(45deg, #020031 0%, #6d3353 100%);
-    background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#020031), color-stop(100%,#6d3353));
-    background: -webkit-linear-gradient(45deg, #020031 0%,#6d3353 100%);
-    background: -o-linear-gradient(45deg, #020031 0%,#6d3353 100%);
-    background: -ms-linear-gradient(45deg, #020031 0%,#6d3353 100%);
-    background: linear-gradient(45deg, #020031 0%,#6d3353 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#020031', endColorstr='#6d3353',GradientType=1 );
-    -webkit-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
-    -moz-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
-    box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
-    border-radius: 0;
-    -moz-border-radius: 0;
-    -webkit-border-radius: 0;
-    -o-border-radius: 0;
+/* Page headers */
+.bs-header {
+  padding: 30px 15px 40px; /* side padding builds on .container 15px, so 30px */
+  font-size: 16px;
+  text-align: center;
+  text-shadow: 0 1px 0 rgba(0,0,0,.15);
+  color: #cdbfe3;
+  background-color: #563d7c;
+  background-image: url('../img/header.png');
 }
-.hero-unit .btn, .pagination-centered .btn {
-    float: none;
-    font-weight: normal;
+.bs-header a {
+  color: #fff;
+  font-weight: normal;
 }
-.hero-unit p {
-    margin: 1em 0;
+.bs-header h1 {
+  color: #fff;
 }
-.bs-docs-social {
-    margin-top: 1em;
-    padding: 15px 0;
-    text-align: center;
-    background-color: rgba(245,245,245,0.3);
-    border-top: 1px solid rgba(255,255,255,0.3);
-    border-bottom: 1px solid rgba(221,221,221,0.3);
+.bs-header p {
+  font-weight: 200;
+  line-height: 1.4;
 }
-.bs-docs-social-buttons {
-    margin-left: 0;
-    margin-bottom: 0;
-    padding-left: 0;
-    list-style: none;
+.bs-header .container {
+  position: relative;
 }
-.bs-docs-social-buttons li {
-    display: inline-block;
-    padding: 5px 8px;
+
+
+@media (min-width: 768px) {
+  .bs-header {
+    font-size: 21px;
+    text-align: left;
+  }
+  .bs-header h1 {
+    font-size: 60px;
     line-height: 1;
+  }
 }
 
-.icon-github {
-    background: no-repeat url('../img/github-16px.png');
-    width: 16px;
-    height: 16px;
+@media (min-width: 992px) {
+  .bs-header h1,
+  .bs-header p {
+    margin-right: 380px;
+  }
+}
+
+.bs-social {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+@media (min-width: 768px) {
+
+  .bs-social {
+    text-align: left;
+  }
+
 }
 
 
-/* =Main content
+/*
+ * Button Inverse
+ *
+ * Buttons in the masthead.
+ */
+
+ .btn-outline-inverse {
+  color: #fff;
+  background-color: transparent;
+  border-color: #cdbfe3;
+  margin: 10px;
+}
+
+@media (min-width: 768px) {
+
+  .btn-outline-inverse {
+    width: auto;
+    margin: 20px 5px 20px 0;
+    padding: 18px 24px;
+    font-size: 21px;
+  }
+
+}
+
+.btn-outline-inverse:hover, .btn-outline-inverse:focus, .btn-outline-inverse:active {
+  color: #563d7c;
+  text-shadow: none;
+  background-color: #fff;
+  border-color: #fff;
+}
+
+/* =PRETTYPRINT TABS
 -----------------------------------------------------------------------------*/
-
-.page-header{
-    padding-top: 3em;
+.nav-tabs > li {
+  float: left;
+  margin-bottom: -1px;
 }
 
-.content h1:first-child {
-    margin-top: 0;
+.nav-tabs > li.active > a,
+.nav-tabs > li.active > a:hover,
+.nav-tabs > li.active > a:focus {
+  background-color: #f8f8f8;
 }
 
-hr {
-    margin: 5em 0;
-}
-
-.bs-docs-section-header {
-    padding-top: 60px;
-    color: #4661B9;
-    border-bottom: 5px solid #4661B9;
-}
-
-/* = Responsive  variations
------------------------------------------------------------------------------*/
-
-/* Hide code snippets on mobile devices */
-@media screen and (max-width: 480px) {
-    .bs-docs-example {
-        border-radius: 4px;
-    }
-
-    .prettyprint {
-        display: none;
-    }
-}
-
-/* Tablets and up */
-@media screen and (min-width: 768px) {
-
-    .bs-docs-section-header h1 {
-        font-size: 80px;
-        font-size: 8rem;
-        line-height: 1;
-    }
-
-    .side {
-        padding-top: 60px;
-    }
-
-    .bs-docs-sidenav.affix {
-        top: 40px;
-        position: fixed;
-    }
-}
-
-/* Tablets/desktops and up */
-@media screen and (min-width: 992px) {
-
-    .bs-docs-sidenav.affix {
-        width : 220px;
-    }
-}
-
-/* Large desktops and up */
-@media screen and (min-width: 1200px) {
-
-    .bs-docs-sidenav.affix {
-        width : 267px;
-    }
+.prettyprint {
+  border-top: none;
 }
